--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -164,7 +164,7 @@
                 android:src="@mipmap/login_qq" />
 
             <ImageView
-                android:id="@+id/iv_login_Wb"
+                android:id="@+id/iv_login_Weibo"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
